# ledger-app-sui

./: .gitignore  CONTRIBUTING.md  Cargo.nix  Cargo.toml  ChangeLog.md  NIX.md  README.md  crate-hashes.json  default.nix  disable-generate-bindings.patch  guide.md  ledger_app.toml  release.nix  run-docker-build.sh  speculos-wrapper  sui-shell.nix  tarball-default.nix  tarball-shell.nix  update-crate-hashes.sh  update-generated-bindings.sh
.cargo/: config
.github/workflows/: build_and_functional_tests.yml  functional_tests.yml  rust.yml
dep/alamgu/: github.json
dep/hw-app-alamgu/: github.json
dep/hw-app-obsidian-common/: github.json
dep/hw-app-sui/: github.json
dep/ledger-nanos-sdk/: github.json
dep/ledger-platform/: github.json
dep/ledger-secure-sdk-nanos/: github.json
dep/ledger-secure-sdk-nanosplus/: github.json
dep/ledger_secure_sdk_sys-bindings/: github.json
dep/nixpkgs-unstable/: github.json
dep/yarn2nix/: github.json
docker/: Dockerfile  run-build-in-docker.sh
docs/: apdu.md  block-protocol.md
ledger_secure_sdk_sys-bindings/nanos/: bindings.rs
ledger_secure_sdk_sys-bindings/nanosplus/: bindings.rs
ledger_secure_sdk_sys-bindings/nanox/: bindings.rs
rust-app/: Cargo.toml  build.rs  nanos.json  nanosplus.json  nanox.json
rust-app/bin-src/: main.rs  main_nanos.rs
rust-app/speculos-api/: Cargo.toml  README.md
rust-app/speculos-api/docs/: Apdu.md  Button.md  ButtonName.md  DefaultApi.md  EventList.md  Finger.md
rust-app/speculos-api/src/apis/: configuration.rs  default_api.rs
rust-app/speculos-api/src/models/: apdu.rs  button.rs  button_name.rs  event_list.rs  finger.rs  mod.rs
rust-app/src/: crypto_helpers.rs  implementation.rs  interface.rs  lib.rs  main.rs  main_nanos.rs  menu.rs  pending.rs  settings.rs  test_parsers.rs  ui.rs  utils.rs
rust-app/tests/: integration.rs  ts-tests.rs
ts-tests/: .mocharc.js  Sui.ts  basic_tests.ts  common.ts  default.nix  get-version-tests.ts  http-transport.ts  node-packages.nix  old-signing-tests.ts  override.nix  package-lock.json  package.json  parsers_tests.ts  public-key-tests.ts  signing-tests.ts
