[package]
name = "alamgu-example"
version = "0.0.1"
authors = ["jonored", "yhql"]
edition = "2018"
autobins = false
resolver = "2"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-crypto-helpers = { git = "https://github.com/alamgu/ledger-crypto-helpers" }
ledger-log = { git = "https://github.com/alamgu/ledger-log" }
ledger-parser-combinators = { git = "https://github.com/alamgu/ledger-parser-combinators", branch="async-split-take-2" }
alamgu-async-block = { git = "https://github.com/alamgu/alamgu-async-block", branch = "prompt-queueing" }
zeroize = { version = "1.5.2", default-features = false }
num_enum = { version = "0.5", default-features = false }
pin-cell = "0.2.0"
pin-project = "1.0.10"

# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable
# speculos logging and change log level.
[features]
default = [ ]
# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable speculos logging and change log level.
speculos = [ "nanos_sdk/speculos", "ledger-log/speculos", "ledger-log/log_error", "ledger-parser-combinators/logging" ]
extra_debug = ["ledger-log/log_trace"]
pending_review_screen = ["nanos_sdk/pending_review_screen"]

[target.'cfg(target_family = "bolos")'.dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }
ledger-prompts-ui = { git = "https://github.com/alamgu/ledger-prompts-ui" }

[target.'cfg(target_family = "bolos")'.dev-dependencies.nanos_sdk]
git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git"
features = [ "speculos" ]

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro" }

[[bin]]
name = "alamgu-example"
test = false
path = "bin-src/main.rs"

[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/alamgu/ledger-nanos-sdk.git"
branch = "relocating-loader-w-fixes"
[patch."https://github.com/LedgerHQ/ledger-nanos-ui.git".nanos_ui]
git = "https://github.com/obsidiansystems/ledger-nanos-ui"
branch = "dn-make-from-pub"

[profile.dev]
# We need this to ensure stack usage is minimal even on speculos
opt-level = 3
# This is needed to avoid this error while doing 'cargo stack-sizes'
#    error: undefined symbol: core::panicking::panic::
overflow-checks = false
[profile.release]
opt-level = 3
overflow-checks = false

[package.metadata.nanos]
name = "Alamgu Example"
api_level = "1"
path = ["44'/535348'"]
curve = ["ed25519"]
flags = "0"
icon = "crab.gif"
icon_small = "crab-small.gif"
